--- a/src/main/resources/templates/blocks/header.html
+++ b/src/main/resources/templates/blocks/header.html
@@ -7,6 +7,10 @@
         <a class="p-2 text-dark" href="/blog">Блог</a>
         <a class="p-2 text-dark" href="/blog/add">Добавить статью</a>
         <a class="p-2 text-dark" href="/about">Про нас</a>
+        <a class="p-2 text-dark" href="/product">Товары</a>
+        <a class="p-2 text-dark" href="/product/add">Добавить Товар</a>
+        <a class="p-2 text-dark" href="/category">Категории</a>
+        <a class="p-2 text-dark" href="/category/add">Добавить Категорию</a>
     </nav>
 </header>
 </div>
