--- a/src/main/resources/templates/blog-main.html
+++ b/src/main/resources/templates/blog-main.html
@@ -15,11 +15,12 @@
 
 <div class="container mt-5">
 
-    <div th:each="el:${posts}" class="alert-info mt-3 ">
+    <div th:each="el:${posts}" class="bg-warning mt-3 ">
         <h3 th:text="${el.title}" />
-        <h4 th:text="${el.anons}" />
+        <h5 th:text="${el.anons}" />
         <p th:text="${el.full_text}" />
-        <a th:href="'/blog/' + ${el.id}" class="=btn btn-warning">Детальнее</a>
+        <a th:href="'/blog/' + ${el.id}" class="=btn btn-sm btn-info">Детальнее</a>
+        <a th:href="'/blog/' + ${el.id}" class="btn btn-sm btn-outline-secondary">Детальнее</a>
 
     </div>
 
