--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -1,10 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title th:text = ${title} />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
 </head>
+
 <body>
-$END$
+
+<header th:insert="blocks/header :: header"></header>
+
+<!--<h1>Категории</h1>-->
+<h1 th:text = ${title}></h1>
+<h2 th:text=${zagolovok}></h2>
+
+<div class="container mt-5">
+
+
+    <div th:each="el:${category}" class="bg-warning mt-3 " >
+
+<!--        <a th:href="'/category/' + ${el.id}">-->
+
+        <h5 th:text="${el.id}" />
+        <h5 th:text="${el.name}" /><br/>
+        <p>Номер родительской категории</p>
+        <h5 th:text="${el.parentId}" />
+        <p th:text="${el.description}" />
+        <a th:href="'/category/' + ${el.id}" class="=btn btn-sm btn-info">Детальнее</a>
+        <a th:href="'/subcategory/' + ${el.id}" class="=btn btn-sm btn-info">Субкатегории</a>
+
+<!--        </a>-->
+
+
+    </div>
+
+
+
+</div>
+
+
+
+<footer th:insert="blocks/footer :: footer"></footer>
+
 </body>
+
 </html>
