--- a/src/main/resources/templates/product-add.html
+++ b/src/main/resources/templates/product-add.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title th:text = ${title} />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
 </head>
 <body>
-$END$
+<header th:insert="blocks/header :: header"></header>
+<h1>Довавить Товар</h1>
+
+<div class="container mt-5 mb-5">
+  <form action="/product/add" method="post">
+    <input type="text" name="prodName" placeholder="Введите название товара" class="form-control"><br>
+    <input type="text" name="prodDescription" placeholder="Введите описание товара" class="form-control"><br>
+    <input type="text" name="prodPrice" placeholder="Введите Цену товара" class="form-control"><br>
+    <button type="submit" class="btn btn-success">Добавить Товар</button>
+  </form>
+</div>
+
+<footer th:insert="blocks/footer :: footer"></footer>
 </body>
 </html>
