--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <title th:text = ${title} />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
 </head>
+
 <body>
-$END$
+
+<header th:insert="blocks/header :: header"></header>
+
+<h1>Карточка Товара</h1>
+
+<div class="container mt-5">
+
+    <div th:each="el:${product}" class="alert-info mt-3">
+        <h3 th:text="${el.name}" />
+        <p th:text="${el.description}" />
+<!--        <p> <b>Просмотры: </b>  <span th:text="${el.views}"/>  </p>-->
+<!--        <a th:href="'/blog/' + ${el.id} +'/edit'" class="=btn btn-warning">Редактировать</a><br><br>-->
+<!--        <form th:action="'/blog/' + ${el.id} +'/remove'" method="post">-->
+<!--            <button class="btn btn-warning" type="submit">Удалить</button>-->
+<!--        </form>-->
+        <!--                <a th:href="'/blog/' + ${el.id} + 'remove'" class="=btn btn-warning">Удалить</a>-->
+
+    </div>
+
+
+</div>
+
+
+
+<footer th:insert="blocks/footer :: footer"></footer>
+
 </body>
+
 </html>
