--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,6 +14,7 @@
 
 <header th:insert="blocks/header :: header"></header>
 
+<img th:src="@{../images/cat1.jpg}"/>
 <p th:text="'Привет, ' + ${title} + '!'" />
 
         <main>
@@ -40,7 +41,14 @@
                         <!--карточка-->
                         <div class="col">
                             <div class="card shadow-sm">
-                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                                     xmlns="http://www.w3.org/2000/svg"
+                                     role="img" aria-label="Placeholder: Thumbnail"
+                                     preserveAspectRatio="xMidYMid slice" focusable="false">
+                                    <title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#ff595c"></rect>
+                                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail бля</text>
+                                </svg>
 
                                 <div class="card-body">
                                     <h4 class="lead text-muted" th:text="${el.title}" />
