--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -11,7 +11,7 @@
 
 <header th:insert="blocks/header :: header"></header>
 
-<!--<h1>Категории</h1>-->
+<h1>Категории</h1>
 <h1 th:text = ${title}></h1>
 <h2 th:text=${zagolovok}></h2>
 <!--Categories Block List-->
