--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -41,26 +41,29 @@
                         <!--карточка-->
                         <div class="col">
                             <div class="card shadow-sm">
-                                <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
+                                <!--<svg class="bd-placeholder-img card-img-top" width="100%" height="225"
                                      xmlns="http://www.w3.org/2000/svg"
                                      role="img" aria-label="Placeholder: Thumbnail"
                                      preserveAspectRatio="xMidYMid slice" focusable="false">
                                     <title>Placeholder</title>
-                                    <rect width="100%" height="100%" fill="#ff595c"></rect>
-                                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail бля</text>
-                                </svg>
+                                    <rect width="100%" height="100%" fill="#55595c">
 
-                                <div class="card-body">
+                                    </rect>
+                                    <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail бля</text>
+                                </svg>-->
+                                    <img  th:src="@{../images/cat1.jpg}" />
+
+                                <div class="card-body" >
                                     <h4 class="lead text-muted" th:text="${el.title}" />
                                     <p class="card-text" th:text="${el.anons}"/>
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
                                             <a th:href="'/blog/' + ${el.id}" class="btn btn-sm btn-outline-primary">View</a>
                                             <a th:href="'/blog/' + ${el.id} + '/edit'" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                            <!--<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                                            <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>-->
                                         </div>
-                                        <small class="text-muted">9 mins</small>
+
                                     </div>
                                 </div>
                             </div>
