--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -2,9 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title th:text = ${title} />
+    <title th:text = "${title}" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -12,29 +17,33 @@
 <header th:insert="blocks/header :: header"></header>
 
 <h1>Категории</h1>
-<h1 th:text = ${title}></h1>
-<h2 th:text=${zagolovok}></h2>
+<h1 th:text = "${title}"></h1>
+<h2 th:text="${zagolovok}"></h2>
 <!--Categories Block List-->
-<div class="container mt-5">
+<!--<div class="container mt-5">
 
-    <div th:each="el:${category}" class="bg-warning mt-3 " >
+    <div th:each="curCat:${category}" class="bg-warning mt-3 " >
 
-<!--        <a th:href="'/category/' + ${el.id}">-->
+&lt;!&ndash;        <a th:href="'/category/' + ${el.id}">&ndash;&gt;
 
-        <h5 th:text="${el.id}" />
-        <h5 th:text="${el.name}" /><br/>
+        <h5 th:text="${curCat.id}" />
+        <h5 th:text="${curCat.name}" /><br/>
         <p>Номер родительской категории</p>
-        <h5 th:text="${el.parentId}" />
-        <p th:text="${el.description}" />
-        <a th:href="'/category/' + ${el.id}" class="=btn btn-sm btn-info">Детальнее</a>
-        <a th:href="'/subcategory/' + ${el.id}" class="=btn btn-sm btn-info">Субкатегории</a>
+        <h5 th:text="${curCat.parentId}" />
+        <p th:text="${curCat.description}" />
 
-<!--        </a>-->
+        <a th:href="'/category/' + ${curCat.id}" class="=btn btn-sm btn-info">Детальнее</a>
+
+        <a th:href="'/categoryEdit/' + ${curCat.id}" class="=btn btn-sm btn-info">Редактировать</a>
+
+        <a th:href="'/subcategory/' + ${curCat.id}" class="=btn btn-sm btn-info">Субкатегории</a>
+
+&lt;!&ndash;        </a>&ndash;&gt;
 
 
     </div>
 
-</div>
+</div>-->
 
 <!-- Cards-->
 <div class="album py-5 bg-light">
@@ -42,43 +51,32 @@
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
 
-            <div class="mb-4" th:each="el:${category}">
+            <div class="card-group mb-4" th:each="cat:${categoryList}">
                 <!--карточка-->
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg"
-                             role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <title>Placeholder</title>
-                            <rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
+                    <div class="card shadow-sm mr-3">
+                            <img th:src="@{'../picsUp/'+${cat.getImagePath()}}" alt="" width="100" height="200" class="card-img-top">
 
                         <div class="card-body">
-                            <h4 class="lead text-muted" th:text="${el.name}" />
-                            <p class="card-text" th:text="${el.description}"/>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <a th:href="'/category/' + ${el.id}" class="btn btn-primary">Детальнее</a>
-                                    <a th:href="'/subcategory/' + ${el.id}" class="=btn btn-sm btn-info">Субкатегории</a>
-<!--                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>-->
-<!--                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>-->
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
+                            <h4 class="lead text-muted" th:text="${cat.name}" />
+                            <p class="card-text" th:text="${cat.description}"/>
+                        </div><!--card body-->
+
+                        <div class="card-footer">
+                             <div class="d-grid gap-1 col-10 mx-auto">
+                                 <a th:href="'/subcategory/' + ${cat.id}" class="=btn btn-sm btn-primary mb-2">Субкатегории</a>
+                                 <a th:href="'/categoryEdit/' + ${cat.id}" class="=btn btn-sm btn-primary mb-2">Редактировать</a>
+                                 <a th:href="'/category/' + ${cat.id}" class="btn btn-sm btn-primary mb-2">Добавить субкатегорию</a>
+                             </div>
+                        </div><!--card footer-->
                     </div>
-                </div>
 
-            </div>
+            </div><!--Card group-->
 
-        </div>
-    </div>
-</div>
+        </div><!--row cols-->
+    </div><!--Container-->
+</div><!--album-->
 <!-- Cards-->
-<div class="card">
-    <img class="card-img-top" src="/images/pathToYourImage.png" alt="Card image cap">
-    <div class="card-body"> Some more card content </div>
-</div>
-<!--New card-->
+
 
 <footer th:insert="blocks/footer :: footer"></footer>
 
