--- a/src/main/resources/templates/subcategory.html
+++ b/src/main/resources/templates/subcategory.html
@@ -2,9 +2,14 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title th:text = ${title} />
+    <title th:text = "${title}" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet"href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+            integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+            integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -13,29 +18,38 @@
 
 <!--Тушка-->
 
-<!--<h1>Категории</h1>-->
-<h1 th:text = ${title}></h1>
-<h2 th:text=${zagolovok}></h2>
+<h1>Категории</h1>
+
 
 <div class="container mt-5">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
+
+        <div class="card-group  mt-3 " th:each="el:${subcategories}">
+            <div class="card shadow p-3 mb-5 mr-3 rounded" style="background-color: bisque">
+
+                <img th:src="@{'../picsUp/'+${el.getImagePath()}}" alt="" width="100" height="200" class="card-img-top">
 
 
-    <div th:each="el:${subcategories}" class="bg-warning mt-3 " >
+                <h5 th:text="${el.id}" />
+                <h5 th:text="${el.name}" /><br/>
+                <p>Номер родительской категории</p>
+                <h5 th:text="${el.parentId}" />
+                <p th:text="${el.description}" />
+                <div class="card-footer">
+                    <div class="d-grid gap-1 col-10 mx-auto">
+                        <a th:href="'/subcategory/' + ${el.id}"     class="=btn btn-sm btn-warning mb-2">Субкатегории</a>
+                        <a th:href="'/category/' + ${el.id}"        class="=btn btn-sm btn-info mb-2" >Добавить подкатегорию</a>
+                        <a th:href="'/categoryEdit/' + ${el.id}"    class="=btn btn-sm btn-primary mb-2">Редактировать</a>
 
-        <!--        <a th:href="'/category/' + ${el.id}">-->
+                    </div>
+                </div>
+            </div>
 
-        <h5 th:text="${el.id}" />
-        <h5 th:text="${el.name}" /><br/>
-        <p>Номер родительской категории</p>
-        <h5 th:text="${el.parentId}" />
-        <p th:text="${el.description}" />
-        <a th:href="'/category/' + ${el.id}" class="=btn btn-sm btn-info">Детальнее</a>
-        <a th:href="'/subcategory/' + ${el.id}" class="=btn btn-sm btn-info">Субкатегории</a>
-
-        <!--        </a>-->
-
-
+        </div>
     </div>
+
+
+
 
 
 
