Adding Pictures workingъ Subcategory  controller refactored pictures added Category and Product remover added

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -66,6 +66,8 @@
                                  <a th:href="'/subcategory/' + ${cat.id}" class="=btn btn-sm btn-primary mb-2">Субкатегории</a>
                                  <a th:href="'/categoryEdit/' + ${cat.id}" class="=btn btn-sm btn-primary mb-2">Редактировать</a>
                                  <a th:href="'/category/' + ${cat.id}" class="btn btn-sm btn-primary mb-2">Добавить субкатегорию</a>
+                                 <hr>
+                                 <a th:href="'/categoryRemove/' + ${cat.id}" class="btn btn-sm btn-danger mb-2">Удалить</a>
                              </div>
                         </div><!--card footer-->
                     </div>
