--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -15,16 +15,35 @@
   <h1>Product list</h1>
 
 
-  <div class="container mt-5">
+  <div class="container mt-5">11
 
-        <div th:each="el:${products}" class="bg-light mt-3 mb-2">
-          <h3 th:text="${el.name}" />
-          <h5 th:text="${el.description}" />
-          <p th:text="${el.price}" />
-          <a th:href="'/product/' + ${el.id}" class="=btn btn-sm btn-danger">Детальнее</a>
-      <!--    <a th:href="'/blog/' + ${el.id}" class="btn btn-sm btn-outline-secondary">Детальнее</a>-->
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-3">
+      <div th:each="element:${productes}" class="card-group bg-light mt-3 mb-2 mr-2">
+        <div class="card mb-3">
+          <div class="card-header">
+            <p th:text="'Id  '+${element.id}"></p>
+            <p th:text="'CategoryId  '+${element.getCategoryId()}"></p>
+          </div>
+          <img th:src="@{'../picsUp/'+${element.getImagePath()}}" alt="" width="100" height="200" class="card-img-top">
 
- </div>
+          <div class="card-body">
+            <h3 th:text="${element.getName()}"/>
+            <h5 th:text="${element.description}"/>
+            <p th:text="${element.price}"/>
+          </div><!--card body-->
+          <div class="card-footer">
+            <a th:href="'/product/' + ${element.id}" class="=btn btn-sm btn-danger">Детальнее</a>
+            <a th:href="'/productEdit/' + ${element.id}" class="=btn btn-sm btn-primary mb-2">Редактировать</a>
+            <hr>
+            <a th:href="'/productRemove/' + ${element.id}" class="=btn btn-sm btn-danger mb-2">Удалить</a>
+          </div>
+
+
+        </div>
+        <!--    <a th:href="'/blog/' + ${el.id}" class="btn btn-sm btn-outline-secondary">Детальнее</a>-->
+
+      </div>
+    </div>
 
 
   <div class="album py-5 bg-light">
@@ -60,7 +79,7 @@
     </div>
   </div>
 
-</div>
+</div><!--Wrap container-->
 <footer th:insert="blocks/footer :: footer"></footer>
 
 
